--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,19 +5,19 @@
 *{
     margin:  0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
 html{
     font-size: 10px;
     font-family: 'Roboto', sans-serif;
-    color: rgb(61, 61, 61);
+    color: rgb(255, 255, 255);
 }
 
 body{
     width: 100%;
     height: 100%;
-    background: url("../images/building.jpg") no-repeat center fixed;
+    background: url("../images/mountain.jpg") no-repeat center fixed;
     background-size: cover;
 }
 
@@ -36,7 +36,7 @@ p{
 }
 
 img{
-    width: 100%;
+    width: 60%;
 }
 
 /* End Global */
@@ -52,7 +52,7 @@ img{
 }
 
 .section-heading{
-    text-auto: center;
+    text-align: center;
     margin-bottom: 10rem;
 }
 
@@ -134,7 +134,7 @@ li{
 }
 
 .nav-link{
-    font-family: 'Butcherman', cursive;
+    font-family: 'Bangers', cursive;
     font-size: 5rem;
     padding: 1rem;
 }
@@ -211,7 +211,7 @@ li{
 
 .landing-text h1{
     font-size: 20rem;
-    font-family: 'Butcherman', cursive;
+    font-family: 'Bangers', cursive;
     background: linear-gradient(to top, #ffe838, #fd57bf);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -240,6 +240,7 @@ li{
     line-height: 0;
     margin-bottom: 6rem;
 }
+
 .about-heading h1{
     font-size: 10rem;
     opacity: .3;
@@ -263,7 +264,7 @@ li{
     margin-top: 5rem;
 }
 
-.social-media{
+.social-media i{
     font-size: 5rem;
     transition: color 650ms;
 }
@@ -272,13 +273,14 @@ li{
     color: #4267b2;
 }
 
-.fa-twitter-square:hover{
-    color: #38a1f3;
+.fa-github-square:hover{
+    color: #5e5c5c;
 }
 
-.fa-dribbble-square:hover{
-    color: #ea4c89;
+.fa-linkedin:hover{
+    color: #0e76a8;
 }
+
 /* End About */
 
 
@@ -526,7 +528,6 @@ input[type="submit"]:hover{
     0%{
         box-shadow: 0 0 0 0 rgba(253, 87, 191, 0.99);
     }
-
     70%{ 
         box-shadow: 0 0 0 2rem rgba(253, 87, 191, 0);
     }
@@ -542,7 +543,7 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 768px) {
     body{
-        background: url("../images/building.jpg") no-repeat center fixed;
+        background: url("../images/mountain.jpg") no-repeat center fixed;
         background-size: cover;
     }
 
@@ -605,6 +606,12 @@ input[type="submit"]:hover{
 }
 
 @media screen and (max-width: 600px) {
+
+    body{
+        background: url("../images/mountain.jpg") no-repeat center fixed;
+        background-size: cover;
+    }
+
     .menu-toggler{
         top: 2rem;
         right: 2rem;
