changed opacity of timeline ul background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,7 @@ text-align: center;
 .timeline ul{
     border-left: 4px solid #05ff11;
     border-radius: .8rem;
-    background: rgba(0, 0, 0, 0.05);
+    background: rgba(0, 0, 0, .25);
     margin: 0 auto;
     position: relative;
     padding: 5rem;
