eliminated the tool bars from the project img screen shots for viewing purposes; switched the html to the php

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,7 +458,7 @@ text-align: center;
 
 /*Start Contact*/
 .contact{
-    background: linear-gradient(to top, #1d1749, #302b46);
+    background: linear-gradient(to top, #17123a, #574e80);
 
 }
 
