--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,11 @@ header {
     height: 100vh;
 }
 
+#myCanvasContainer {
+    position: relative;
+    left: 400px;
+}
+
 .top-nav{
     width: 100%;
     height: 100vh;
@@ -215,7 +220,7 @@ li{
 }
 
 .landing-text h1{
-    font-size: 20rem;
+    font-size: 15rem;
     font-family: 'Bangers', cursive;
     background: linear-gradient(to top, #05ff11, #1621c4);
     -webkit-background-clip: text;
@@ -556,7 +561,7 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 768px) {
     body{
-        background: url("../images/abstract.jpg") no-repeat center fixed;
+        background: url("../images/polygon.jpg") no-repeat center fixed;
         background-size: cover;
     }
 
