modified styles.css, index.html and app.js; added items to the tag canvas list, modifiying the resume pdf link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,10 +112,14 @@ header {
     height: 100vh;
 }
 
-#myCanvasContainer {
-    position: relative;
-    left: 400px;
+canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
+
 
 .top-nav{
     width: 100%;
@@ -124,6 +128,7 @@ header {
     top: -100vh;
     z-index: 50;
     background: url(../images/polygon.jpg);
+    background-size: cover;
     color:  #05ff11;
     border-bottom-right-radius: 100%;
     border-bottom-left-radius: 100%;
@@ -152,6 +157,7 @@ li{
 .nav-link:hover,
 .nav-link:focus{
     background: linear-gradient(to top, #05ff11, #1621c4);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -419,7 +425,7 @@ text-align: center;
 }
 
 .timeline .date{
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-bottom: 1px solid rgba(51, 255, 0, 0.205);
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     position: relative;
@@ -464,6 +470,7 @@ text-align: center;
 /*Start Contact*/
 .contact{
     background: linear-gradient(to top, #17123a, #574e80);
+    
 
 }
 
@@ -523,7 +530,7 @@ input[type="submit"]:hover{
     right: 5rem;
     border-radius: 100%;
     display: flex;
-    animation: pulse 2s infinite;
+    animation: pulse 1.5s infinite;
     cursor: pointer;
 }
 
@@ -560,10 +567,7 @@ input[type="submit"]:hover{
 /*Media Queries*/
 
 @media screen and (max-width: 768px) {
-    body{
-        background: url("../images/polygon.jpg") no-repeat center fixed;
-        background-size: cover;
-    }
+
 
     .landing-text h1{
         font-size: 15rem;
@@ -625,10 +629,7 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 600px) {
 
-    body{
-        background: url("../images/abstract.jpg") no-repeat center fixed;
-        background-size: cover;
-    }
+
 
     .menu-toggler{
         top: 2rem;
