--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,13 @@ html{
 }
 
 body{
-    width: 100%;
-    height: 100%;
-    background: url("../images/abstract.jpg") no-repeat center fixed;
+    height: 100vh;
+    background-image: url("../images/abstract.jpg");
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     background-size: cover;
+
 }
 
 section {
@@ -701,9 +704,6 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 600px) {
 
-    body {
-        background-size: auto auto;
-    }
     .menu-toggler{
         top: 2rem;
         right: 2rem;
@@ -778,4 +778,5 @@ input[type="submit"]:hover{
     .up{
         right: 2rem;
     }
+}
 }
