continutation of building mobile responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,11 +42,6 @@ img{
     width: 60%;
 }
 
-sgv {
-    width: 100%;
-    height: 100%;
-}
-
 /* End Global */
 
 /* Start Reusable */
@@ -231,7 +226,7 @@ li{
 }
 
 .landing-text h1{
-    font-size: 15rem;
+    font-size: 14rem;
     font-family: 'Bangers', cursive;
     background: linear-gradient(to top, #05ff11, #1621c4);
     -webkit-background-clip: text;
@@ -569,20 +564,57 @@ input[type="submit"]:hover{
 
 /*Media Queries*/
 
-@media screen and (max-width: 1026px) {
-    svg {
+@media screen and (max-width: 1450px) {
+
+    .landing-text h1{
+        font-size: 13rem;
+    }
+
+    .landing-text h6{
+        font-size: 1.5rem;
+    }
+    
+
+    
+@media screen and (max-width: 1200px) {
+
+    .landing-text h1{
+        font-size: 11rem;
+    }
+
+    .landing-text h6{
+        font-size: 1.4rem;
+    }
+
+
+
+
+@media screen and (max-width: 1020px) {
+    .portfolio-description p{
         display: none;
+    }
+
+    .landing-text h1{
+        font-size: 9rem;
+    }
+
+    .landing-text h6{
+        font-size: 1.4rem;
     }
 }
 
-@media screen and (min-width: 1026px) {
-    #nameText {
-        display: none;
+
+
+@media screen and (max-width: 980px) {
+
+    .landing-text h1{
+        font-size: 7rem;
     }
-};
 
-
-@media screen and (max-width: 900px) {
+    .landing-text h6{
+        font-size: 1.4rem;
+    }
+    
     p {
         display: block;
         margin-block-start: 0em;
@@ -590,67 +622,74 @@ input[type="submit"]:hover{
         margin-inline-start: 0px;
         margin-inline-end: 0px;
     }
+
     .menu-toggler {
         top: 1rem;
         right: 1rem;
         width: 4rem;
         height: 3rem;
     }
-    .landing-text h1 {
-        /* background: linear-gradient(to top, #ffe838, #ff0026); */
-        font-size: 15rem;
-    }
-    .landing-text h6 {
-        font-size: 4rem;
-    }
+
     .nav-list {
         flex-direction: column;
     }
+
     .nav-link {
         font-size: 4.5rem;
     }
+
     .about .container {
         flex-direction: column;
     }
+
     .about-heading h1 {
         font-size: 8rem;
         margin-top: 5rem;
     }
+
     .section-heading {
         font-size: 3rem;
-    }
+    
+}
     .about-details .nav-list {
         flex-direction: initial;
     }
+
     .about-details li {
         margin: 0 2rem;
     }
+
     .my-skills {
         display: block;
     }
+
+
     .icon-container {
         font-size: 4rem;
     }
+
     .timeline ul {
         margin: 0 0 0 auto;
     }
+
     .timeline .date::before {
         left: -22rem;
         text-shadow: 1px 1px 2px black;
     }
+
     .timeline .date::after {
         left: -8rem;
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 720px) {
 
     .landing-text h1{
-        font-size: 15rem;
+        font-size: 6rem;
     }
 
     .landing-text h6{
-        font-size: 1.7rem;
+        font-size: 1.3rem;
     }
 
     .nav-list{
@@ -704,17 +743,26 @@ input[type="submit"]:hover{
 
 @media screen and (max-width: 600px) {
 
-    .menu-toggler{
-        top: 2rem;
-        right: 2rem;
+    .portfolio-description{
+        display: none;
     }
-
+    
     .landing-text h1{
-        font-size: 8rem;
+        font-size: 5rem;
     }
 
     .landing-text h6{
-        font-size: 3rem;
+        font-size: 1.1rem;
+    }
+
+    .myCanvas{
+        width: 600px; height: 300px;
+        position: fixed;
+    }
+
+    .menu-toggler{
+        top: 2rem;
+        right: 2rem;
     }
 
     .nav-link{
@@ -722,7 +770,6 @@ input[type="submit"]:hover{
     }
 
     .about .container{
-        /* display: flow-root; */
         flex-direction: column;
         align-items: center;
         justify-content: center;
@@ -753,16 +800,16 @@ input[type="submit"]:hover{
         order: 1;
     }
 
-    .portfolio-description{
+    .portfolio-description {
         margin: 0;
         order: 2;
     }
 
-    .timeline p{
+    .timeline p {
         font-size: 1.6rem;
     }
 
-    .timeline .date::before{
+    .timeline .date::before {
         font-size: 1.4rem;
         left: -22rem;
     }
@@ -779,4 +826,27 @@ input[type="submit"]:hover{
         right: 2rem;
     }
 }
+
+@media screen and (max-width: 490px) {
+
+    .landing-text h1 {
+        font-size: 3.5rem;
+    }
+
+    .landing-text h6 {
+        font-size: 1rem;
+    }
 }
+
+@media screen and (max-width: 350px) {
+
+    .landing-text h1 {
+        font-size: 3rem;
+    }
+
+    /* .landing-text h6 {
+        font-size: 1rem;
+    } */
+}
+
+}}}
