continuing to adjust css to make the app  mobile responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,52 +1,51 @@
-
-
 /* Start Global */
 
-*{
-    margin:  0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     font-size: 10px;
     font-family: 'Roboto', sans-serif;
     color: rgb(255, 255, 255);
 }
 
-body{
+body {
     height: 100vh;
     background-image: url("../images/abstract.jpg");
     background-position: center center;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-
 }
 
 section {
     padding: 6rem 0;
 }
 
-a{
+a {
     text-decoration: none;
     color: #eee;
 }
 
-p{
+p {
     font-size: 1.8rem;
     font-weight: 300;
 }
 
-img{
+img {
     width: 60%;
 }
 
+
 /* End Global */
+
 
 /* Start Reusable */
 
-.container{
+.container {
     width: 90%;
     max-width: 120rem;
     height: 100%;
@@ -54,12 +53,12 @@ img{
     position: relative;
 }
 
-.section-heading{
+.section-heading {
     text-align: center;
     margin-bottom: 10rem;
 }
 
-.section-heading h1{
+.section-heading h1 {
     font-size: 3.5rem;
     color: rgba(255, 255, 255, .3);
     text-transform: uppercase;
@@ -69,40 +68,39 @@ img{
 }
 
 .section-heading h1::before,
-.section-heading h1::after{
-content: '';
-position: absolute;
-bottom: -.5rem;
-left: 50%;
-transform: translateX(-50%);
-background-color: rgba(255, 255, 255, 0.75);
+.section-heading h1::after {
+    content: '';
+    position: absolute;
+    bottom: -.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(255, 255, 255, 0.75);
 }
 
-.section-heading h1::before{
+.section-heading h1::before {
     width: 10rem;
     height: 3px;
     border-radius: .8rem;
 }
 
-.section-heading h1::after{
+.section-heading h1::after {
     width: 1.5rem;
     height: 1.5rem;
     border-radius: 100%;
     bottom: -1rem;
-
 }
-.section-heading h6{
+
+.section-heading h6 {
     font-size: 1.6rem;
     font-weight: 300;
 }
 
-.has-margin-right{
+.has-margin-right {
     margin-right: 5rem;
 }
 
 
 /* End Reusable */
-
 
 
 /* Start Header */
@@ -120,8 +118,7 @@ canvas {
     display: block;
 }
 
-
-.top-nav{
+.top-nav {
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -129,13 +126,13 @@ canvas {
     z-index: 50;
     background: url(../images/polygon.jpg);
     background-size: cover;
-    color:  #05ff11;
+    color: #05ff11;
     border-bottom-right-radius: 100%;
     border-bottom-left-radius: 100%;
-    transition: all 650ms cubic-bezier(1,0,0,1);
+    transition: all 650ms cubic-bezier(1, 0, 0, 1);
 }
 
-.nav-list{
+.nav-list {
     list-style: none;
     width: 100%;
     height: 100%;
@@ -144,30 +141,30 @@ canvas {
     align-items: center;
 }
 
-li{
+li {
     margin: 0 2rem;
 }
 
-.nav-link{
+.nav-link {
     font-family: 'Bangers', cursive;
     font-size: 5rem;
     padding: 1rem;
 }
 
 .nav-link:hover,
-.nav-link:focus{
+.nav-link:focus {
     background: linear-gradient(to top, #05ff11, #1621c4);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-.top-nav.open{
+.top-nav.open {
     top: 0;
     border-radius: initial;
 }
 
-.menu-toggler{
+.menu-toggler {
     position: absolute;
     top: 5rem;
     right: 5rem;
@@ -181,41 +178,41 @@ li{
     transition: transform 650ms ease-out;
 }
 
-.menu-toggler.open{
+.menu-toggler.open {
     transform: rotate(-45deg);
 }
 
-.bar{
+.bar {
     background: linear-gradient(to right, #05ff11, #1621c4);
     width: 100%;
     height: 4px;
     border-radius: .8rem;
 }
 
-.bar.half{
+.bar.half {
     width: 50%;
 }
 
-.bar.start{
+.bar.start {
     transform-origin: right;
     transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
 }
 
-.open .bar.start{
+.open .bar.start {
     transform: rotate(-450deg) translateX(.8rem);
 }
 
-.bar.end{
+.bar.end {
     align-self: flex-end;
     transform-origin: left;
     transition: transform 650ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
 }
 
-.open .bar.end{
+.open .bar.end {
     transform: rotate(-450deg) translateX(-.8rem);
 }
 
-.landing-text{
+.landing-text {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -225,7 +222,7 @@ li{
     z-index: 1;
 }
 
-.landing-text h1{
+.landing-text h1 {
     font-size: 14rem;
     font-family: 'Bangers', cursive;
     background: linear-gradient(to top, #05ff11, #1621c4);
@@ -235,87 +232,90 @@ li{
     user-select: none;
 }
 
-.landing-text h6{
+.landing-text h6 {
     font-size: 2rem;
     font-weight: 300;
 }
 
+
 /* End Header */
+
 
 /* Start About */
 
-.about .container{
+.about .container {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.about-heading{
+.about-heading {
     text-align: center;
     text-transform: uppercase;
     line-height: 0;
     margin-bottom: 6rem;
 }
 
-.about-heading h1{
+.about-heading h1 {
     font-size: 10rem;
     opacity: .3;
 }
 
-.about-heading h6{
+.about-heading h6 {
     font-size: 2rem;
     font-weight: 300;
 }
 
-.profle-img{
+.profle-img {
     flex: 1;
     margin-right: 5rem;
 }
 
-.about-details{
+.about-details {
     flex: 1;
 }
 
-.social-media{
+.social-media {
     margin-top: 5rem;
 }
 
-.social-media i{
+.social-media i {
     font-size: 10rem;
     transition: color 650ms;
     padding: 15px;
 }
 
-.fa-facebook-square:hover{
+.fa-facebook-square:hover {
     color: #4267b2;
 }
 
-.fa-github-square:hover{
+.fa-github-square:hover {
     color: #5e5c5c;
 }
 
-.fa-linkedin:hover{
+.fa-linkedin:hover {
     color: #0e76a8;
 }
 
-.fa-file-pdf-o:hover{
+.fa-file-pdf-o:hover {
     color: rgb(180, 25, 25);
 }
+
 
 /* End About */
 
 
 /* Start Services */
 
-.my-skills{
-margin-top: 10rem;
-display: grid;
-grid-template-columns:repeat(auto-fit, minmax(25rem, 1fr));
-grid-gap: 2.5rem;
-text-align: center;
+.my-skills {
+    margin-top: 10rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 2.5rem;
+    text-align: center;
 }
 
-.skill{
+.skill {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -323,13 +323,13 @@ text-align: center;
     padding: 2rem;
 }
 
-.skill h1{
+.skill h1 {
     text-transform: uppercase;
     letter-spacing: 2px;
     margin: 2rem, -2px, 2rem, 0;
 }
 
-.icon-container{
+.icon-container {
     width: 10rem;
     height: 10rem;
     border: 3px solid #05ff11;
@@ -339,52 +339,53 @@ text-align: center;
     transform: rotate(45deg);
 }
 
-.icon-container i{
+.icon-container i {
     color: #05ff11;
     font-size: 5rem;
     margin: auto;
     transform: rotate(-45deg);
 }
 
+
 /* End Services */
 
 
 /* Start Portfolio */
 
-.portfolio-item{
+.portfolio-item {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 5rem;
 }
 
-.portfolio-item:last-child{
+.portfolio-item:last-child {
     margin-bottom: 0;
 }
 
-.profile-img{
+.profile-img {
     width: 50rem;
     flex: 1;
 }
 
-.portfolio-description{
+.portfolio-description {
     width: 60%;
 }
 
-.portfolio-description h1{
+.portfolio-description h1 {
     font-size: 3rem;
     font-weight: 300;
     margin: 1rem 0;
 }
 
-.portfolio-description h6{
+.portfolio-description h6 {
     font-size: 1.5rem;
     text-transform: uppercase;
     font-weight: 300;
     opacity: 0.3;
 }
 
-.portfolio-description .cta{
+.portfolio-description .cta {
     display: inline-block;
     margin-top: 2.5rem;
     font-size: 1.5rem;
@@ -393,18 +394,17 @@ text-align: center;
     transition: color 650ms;
 }
 
-.portfolio-description .cta:hover{
+.portfolio-description .cta:hover {
     color: #2f67cd;
 }
+
 
 /* End Portfolio */
 
 
-
-
 /*Start Timeine*/
 
-.timeline ul{
+.timeline ul {
     border-left: 4px solid #05ff11;
     border-radius: .8rem;
     background: rgba(0, 0, 0, .25);
@@ -416,7 +416,7 @@ text-align: center;
     width: 70%;
 }
 
-.timeline h1{
+.timeline h1 {
     font-size: 2rem;
     text-transform: uppercase;
     font-weight: 300;
@@ -424,28 +424,28 @@ text-align: center;
     opacity: .3;
 }
 
-.timeline .date{
+.timeline .date {
     border-bottom: 1px solid rgba(51, 255, 0, 0.205);
     margin-bottom: 1rem;
     padding-bottom: 1rem;
     position: relative;
 }
 
-.timeline .date:last-of-type{
+.timeline .date:last-of-type {
     padding-bottom: 0;
     margin-bottom: 0;
     border: none;
 }
 
 .timeline .date::before,
-.timeline .date::after{
+.timeline .date::after {
     position: absolute;
     display: block;
     top: 50%;
     transform: translateY(-50%);
 }
 
-.timeline .date::before{
+.timeline .date::before {
     content: attr(data-date);
     left: -21rem;
     text-align: right;
@@ -453,9 +453,9 @@ text-align: center;
     font-size: 1.5rem;
 }
 
-.timeline .date::after{
+.timeline .date::after {
     content: '';
-    box-shadow: 0 0 0 4px,  #05ff11;
+    box-shadow: 0 0 0 4px, #05ff11;
     border-radius: 100%;
     left: -8rem;
     height: 1.5rem;
@@ -463,27 +463,28 @@ text-align: center;
     background-color: #1621c4;
 }
 
+
 /*End Timeline*/
 
 
-
 /*Start Contact*/
-.contact{
+
+.contact {
     background: linear-gradient(to top, #17123a, #574e80);
 }
 
-form{
+form {
     width: 70%;
     margin: 0 auto;
 }
 
-form label{
+form label {
     font-size: 1.5rem;
 }
 
 input,
 select,
-textarea{
+textarea {
     width: 100%;
     padding: 1rem;
     margin-bottom: 5px;
@@ -491,7 +492,7 @@ textarea{
     outline-color: #05ff11;
 }
 
-input[type="submit"]{
+input[type="submit"] {
     width: initial;
     background-color: #1621c4;
     color: #eee;
@@ -501,17 +502,18 @@ input[type="submit"]{
     transition: background-color 650ms;
 }
 
-input[type="submit"]:hover{
+input[type="submit"]:hover {
     color: #1d1d1d;
     background-color: #05ff11;
 }
+
 
 /*End Contact*/
 
 
 /*Start Footer*/
 
-.copyright{
+.copyright {
     width: 100%;
     text-align: center;
     background-color: #16162d;
@@ -519,7 +521,7 @@ input[type="submit"]:hover{
     position: relative;
 }
 
-.up{
+.up {
     position: absolute;
     width: 5rem;
     height: 5rem;
@@ -532,32 +534,35 @@ input[type="submit"]:hover{
     cursor: pointer;
 }
 
-.up i{
+.up i {
     color: #16162d;
     font-size: 2rem;
     margin: auto;
 }
 
-.copyright p{
-    color:  #05ff11;
+.copyright p {
+    color: #05ff11;
     font-size: 1.4rem;
 }
+
+
 /*End Footer*/
 
 
 /*Start Animations*/
 
 @keyframes pulse {
-    0%{
+    0% {
         box-shadow: 0 0 0 0 rgba(72, 255, 0, 0.99);
     }
-    70%{ 
+    70% {
         box-shadow: 0 0 0 2rem rgba(72, 255, 0, 0);
     }
-    100%{
+    100% {
         box-shadow: 0 0 0 0 rgba(72, 255, 0, 0);
     }
 }
+
 
 /*End Animations*/
 
@@ -565,56 +570,42 @@ input[type="submit"]:hover{
 /*Media Queries*/
 
 @media screen and (max-width: 1450px) {
-
-    .landing-text h1{
+    .landing-text h1 {
         font-size: 13rem;
     }
-
-    .landing-text h6{
+    .landing-text h6 {
         font-size: 1.5rem;
     }
-    
+}
 
-    
 @media screen and (max-width: 1200px) {
-
-    .landing-text h1{
+    .landing-text h1 {
         font-size: 11rem;
     }
-
-    .landing-text h6{
-        font-size: 1.4rem;
-    }
-
-
-
-
-@media screen and (max-width: 1020px) {
-    .portfolio-description p{
-        display: none;
-    }
-
-    .landing-text h1{
-        font-size: 9rem;
-    }
-
-    .landing-text h6{
+    .landing-text h6 {
         font-size: 1.4rem;
     }
 }
 
-
-
-@media screen and (max-width: 980px) {
-
-    .landing-text h1{
-        font-size: 7rem;
+@media screen and (max-width: 1020px) {
+    .portfolio-description p {
+        display: none;
     }
-
-    .landing-text h6{
+    .landing-text h1 {
+        font-size: 9rem;
+    }
+    .landing-text h6 {
         font-size: 1.4rem;
     }
-    
+}
+
+@media screen and (max-width: 980px) {
+    .landing-text h1 {
+        font-size: 7rem;
+    }
+    .landing-text h6 {
+        font-size: 1.4rem;
+    }
     p {
         display: block;
         margin-block-start: 0em;
@@ -622,159 +613,131 @@ input[type="submit"]:hover{
         margin-inline-start: 0px;
         margin-inline-end: 0px;
     }
-
     .menu-toggler {
         top: 1rem;
         right: 1rem;
         width: 4rem;
         height: 3rem;
     }
-
     .nav-list {
         flex-direction: column;
     }
-
     .nav-link {
         font-size: 4.5rem;
     }
-
     .about .container {
         flex-direction: column;
     }
-
     .about-heading h1 {
         font-size: 8rem;
         margin-top: 5rem;
     }
-
     .section-heading {
         font-size: 3rem;
-    
-}
+    }
     .about-details .nav-list {
         flex-direction: initial;
     }
-
     .about-details li {
         margin: 0 2rem;
     }
-
     .my-skills {
         display: block;
     }
-
-
     .icon-container {
         font-size: 4rem;
     }
-
     .timeline ul {
         margin: 0 0 0 auto;
     }
-
     .timeline .date::before {
         left: -22rem;
         text-shadow: 1px 1px 2px black;
     }
-
     .timeline .date::after {
         left: -8rem;
+    }
+    .portfolio-description p {
+        display: none;
     }
 }
 
 @media screen and (max-width: 720px) {
-
-    .landing-text h1{
+    .landing-text h1 {
         font-size: 6rem;
     }
-
-    .landing-text h6{
+    .landing-text h6 {
         font-size: 1.3rem;
     }
-
-    .nav-list{
+    .nav-list {
         flex-direction: column;
     }
-
-    li{
+    li {
         margin: 2rem 0;
     }
-
-    .nav-link{
+    .nav-link {
         font-size: 4.5rem;
     }
-
-    .about-heading h1{
+    .about-heading h1 {
         font-size: 8rem;
     }
-
-    .section-heading h1{
+    .section-heading h1 {
         font-size: 3rem;
     }
-
-    .about-details .nav-list{
+    .about-details .nav-list {
         flex-direction: initial;
     }
-
-    .about-details li{
+    .about-details li {
         margin: 0 2rem;
     }
-
-    .icon-container{
+    .icon-container {
         width: 7rem;
         height: 7rem;
     }
-
-    .icon-container i{
+    .icon-container i {
         font-size: 5rem;
     }
-
-    .timeline ul{
+    .timeline ul {
         margin: 0 0 0 auto;
     }
-
-    .timeline .date::before{
+    .timeline .date::before {
         left: -20rem;
     }
-
-    .timeline .date::after{
+    .timeline .date::after {
         left: -5.9rem;
     }
-
-@media screen and (max-width: 600px) {
-
-    .portfolio-description{
+    .portfolio-description p {
         display: none;
     }
-    
-    .landing-text h1{
+}
+
+@media screen and (max-width: 600px) {
+    .portfolio-description p {
+        display: none;
+    }
+    .landing-text h1 {
         font-size: 5rem;
     }
-
-    .landing-text h6{
+    .landing-text h6 {
         font-size: 1.1rem;
     }
-
-    .myCanvas{
-        width: 600px; height: 300px;
+    .myCanvas {
+        width: 600px;
+        height: 300px;
         position: fixed;
     }
-
-    .menu-toggler{
+    .menu-toggler {
         top: 2rem;
         right: 2rem;
     }
-
-    .nav-link{
+    .nav-link {
         font-size: 3.5rem;
     }
-
-    .about .container{
+    .about .container {
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
-
     p {
         display: flex;
         margin-block-start: 0em;
@@ -782,71 +745,110 @@ input[type="submit"]:hover{
         margin-inline-start: 63px;
         margin-inline-end: 50px;
     }
-
     .social-media i {
         font-size: 4rem;
     }
-
-    .profile-img{
+    .profile-img {
         margin: 0 0 7rem 0;
     }
-
-    .portfolio-item{
+    .portfolio-item {
         flex-direction: column;
     }
-
-    .portfolio-img{
+    .portfolio-img {
         margin: 0 0 2rem 0;
         order: 1;
     }
-
     .portfolio-description {
         margin: 0;
         order: 2;
     }
-
     .timeline p {
         font-size: 1.6rem;
     }
-
     .timeline .date::before {
         font-size: 1.4rem;
         left: -22rem;
     }
-
     .timeline .date::after {
         left: -8rem;
     }
-
-    form{
+    form {
         width: 100%
     }
-
-    .up{
+    .up {
         right: 2rem;
+    }
+    .timeline p {
+        font-size: 1.6rem;
     }
 }
 
 @media screen and (max-width: 490px) {
-
     .landing-text h1 {
         font-size: 3.5rem;
     }
-
     .landing-text h6 {
         font-size: 1rem;
+    }
+    .portfolio-description p {
+        display: none;
     }
 }
 
 @media screen and (max-width: 350px) {
-
     .landing-text h1 {
         font-size: 3rem;
     }
-
-    /* .landing-text h6 {
+    .landing-text h6 {
         font-size: 1rem;
-    } */
+    }
+    .portfolio-description p {
+        display: none;
+    }
+    .nav-list {
+        flex-direction: column;
+    }
+    .nav-link {
+        font-size: 3.5rem;
+    }
+    .about .container {
+        flex-direction: column;
+    }
+    #myCanvas {
+        width: 380px;
+        height: 700px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    img {
+        left: 300px;
+    }
+    .timeline .date::before {
+        font-size: 1rem;
+        left: -21rem;
+    }
+    .timeline p {
+        font-size: 1.6rem;
+    }
+    body {
+        height: 100vh;
+        background-image: url("../images/abstract.jpg");
+        background-position: center center;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .top-nav {
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        top: -100vh;
+        z-index: 50;
+        background: url(../images/polygon.jpg);
+        background-size: cover;
+        color: #05ff11;
+        border-bottom-right-radius: 100%;
+        border-bottom-left-radius: 100%;
+        transition: all 650ms cubic-bezier(1, 0, 0, 1);
+    }
 }
-
-}}}
