continuing bg img edits

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,17 +14,17 @@
         
         body {
             height: 100vh;
-            background-image: url("../images/abstract.jpg") no-repeat center center fixed;
+            background-image: url("../images/abstract.jpg");
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
             height: 100%;
             overflow: hidden;
-            /* background-position: center center;
+            background-position: center center;
             background-attachment: fixed;
             background-repeat: no-repeat;
-            background-size: cover; */
+            background-size: cover;
         }
         
         section {
