edits to background image; contact form height; aos scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,6 @@
         body {
             height: 100vh;
             background-image: url("../images/abstract.jpg");
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-            height: 100%;
-            overflow: hidden;
             background-position: center center;
             background-attachment: fixed;
             background-repeat: no-repeat;
@@ -802,7 +796,7 @@
             }
             body {
                 height: 100vh;
-                background-image: url("../images/abstract.jpg");
+                background-image: url("../images/blueblocks.jpg");
                 background-position: center center;
                 background-attachment: fixed;
                 background-repeat: no-repeat;
